# advent-of-code

./: .codeclimate.yml  .gitignore  LICENSE  Makefile  README.md  advent2016.cabal  fetch_input.sh  stack.yaml
2015/: Makefile
2015/d01/: d01.nim
2015/d02/: d02.nim
2015/d03/: d03.nim
2015/d04/: d04.nim
2015/d05/: d05.nim
2015/d06/: d06.nim  d06.py  foo.txt
2015/d07/: d07.py
2015/d08/: d08.rb
2015/d09/: d09.rb
2015/d10/: d10.rb
2015/d11/: d11.rb  test.rb
2015/d12/: d12.rb
2015/d13/: d13.rb
2015/d14/: d14.rb
2015/d15/: d15.rb
2015/d16/: d16.rb
2015/d17/: d17.rb
2015/d18/: d18.rb
2015/d19/: d19.rb
2015/d20/: d20.rb
2015/d21/: d21.rb
2015/d22/: d22.rb
2015/d23/: d23.rb
2015/d24/: d24.rb
2015/d25/: d25.rb
2015/lib/: pqueue.rb
2016/: .gitignore  Makefile  advent2016.cabal  d11-eg-all-items-goal.txt  d11-eg-only-microchip-goal.txt  d11.tmp  stack.yaml
2016/app/: D1.hs  D10.hs  D11.hs  D12.hs  D14.hs  D16.hs  D17.hs  D19.hs  D2.hs  D21.hs  D3.hs  D4.hs  D5.hs  D6.hs  D8.hs  D9.hs
2016/d11/: d11.rb
2016/d22/: d22.rb
2016/d23/: d23.rb  input.annotated  input.optim
2016/d24/: d24.rb
2016/d25/: d25.rb
2016/src/: AStar.hs  D11Lib.hs  D12Lib.hs  D15Lib.hs  D16Lib.hs  D17Lib.hs  D19Lib.hs  D20Lib.hs  D22Lib.hs  D2Lib.hs  D5Lib.hs  D8Lib.hs  D9Lib.hs
2016/test/: D11LibSpec.hs  D12Spec.hs  D13Spec.hs  D15Spec.hs  D17Spec.hs  D18Spec.hs  D19Spec.hs  D20Spec.hs  D21Spec.hs  D22Spec.hs  D2Spec.hs  D3Spec.hs  D8Spec.hs  D9Spec.hs
2017/: new.sh  stack.yaml.tmpl  template.hsfiles
2017/D1/: D1.cabal
2017/D10/: D10.cabal
2017/D11/: D11.cabal
2017/D12/: D12.cabal  stack.yaml
2017/D13/: D13.cabal
2017/D14/: D14.cabal  sample-groups  stack.yaml
2017/D15/: D15.cabal  Makefile
2017/D16/: D16.cabal  Makefile
2017/D16/app/: Main.hs
2017/D16/src/: D16Lib.hs
2017/D16/src/D16Lib/: Parser.hs
2017/D16/test/: D16Spec.hs
2017/D16/test/D16Lib/: ParserSpec.hs
2017/D17/: D17.cabal  Makefile  p2.rb
2017/D18/: D18.aux  D18.cabal  D18.hp  D18.ps  Makefile  d18.rb
2017/D2/: D2.cabal
2017/D3/: D3.cabal  LICENSE
2017/D4/: D4.cabal
2017/D5/: D5.cabal
2017/D6/: D6.cabal
2017/D7/: D7.cabal
2017/D7/app/: Main.hs
2017/D7/src/: D7Lib.hs
2017/D7/test/: D7Spec.hs
2017/D8/: D8.cabal
2017/D9/: D9.cabal  Makefile
2017/KnotHash/: .gitignore  ChangeLog.md  LICENSE  Makefile  README.md  package.yaml
2017/d19/: d19.rb
2017/d20/: d20.rb  test.rb
2017/d21/: d21.rb  test.rb
2017/d22/: d22.rb  test.rb
2017/d23/: d23.rb
2017/d24/: d24.rb
2017/d25/: d25.rb
2018/: new.sh
2018/d01/: .gitignore  Cargo.toml  Makefile
2018/d02/: shard.yml
2018/d03/: Makefile  shard.yml
2018/d04/: Makefile
2018/d05/: Makefile  d5.rb  d5_spec.rb
2018/d06/: Makefile  d6_spec.rb
2018/d1/: LICENSE  README.md  d1.clj  main.rkt  shard.yml
2018/d10/: Dockerfile  Makefile  d10.rb
2018/d11/: Makefile  d11.rb  d11_spec.rb
2018/d12/: Makefile  d12.rb  d12_spec.rb
2018/d13/: Makefile  d13.rb  d13_spec.rb
2018/d14/: .gitignore  Makefile  d14.c  d14.rb  d14_spec.rb
2018/d15/: Makefile  d15.rb  d15_spec.rb
2018/d16/: Makefile  d16.rb  d16_spec.rb
2018/d17/: Makefile  d17.rb  d17_spec.rb  input.txt
2018/d18/: Makefile  d18.rb  d18_spec.rb
2018/d19/: Makefile  d19.rb  d19_spec.rb  d19p2.c  decompile.rb  input-annotated.txt  input.annotated
2018/d2/: Makefile  README.md
2018/d20/: Makefile  d20.rb  d20_spec.rb  pqueue.rb  viz
2018/d21/: d21.rb  input.annotated
2018/d22/: Makefile  d22.rb  d22_spec.rb
2018/d23/: d23.rb  test.rb
2018/d24/: d24.rb  test.rb
2018/d25/: d25.rb  test.rb
2018/d3/: README.md
2018/d4/: d4.rb  d4_spec.rb
2018/d6/: d6.rb
2018/d7/: Makefile  d7.rb  d7_spec.rb
2018/d8/: Makefile  d8.rb  d8_spec.rb
2018/d9/: Makefile  d9.rb  d9_spec.rb
2019/d1/: main.rs
2019/d10/: d10.rb  input.txt
2019/d11/: Cargo.toml  main.rs  robot.rs
2019/d12/: Cargo.toml
2019/d13/: Cargo.toml
2019/d14/: Cargo.toml  input.txt
2019/d15/: Cargo.toml
2019/d16/: Cargo.toml
2019/d17/: Cargo.toml
2019/d18/: Makefile  cpp_notes.txt  d18.cpp  explore.jl  input.txt  main.jl  maze.jl  spec.cpp  spec.jl
2019/d19/: Cargo.toml
2019/d2/: main.rs
2019/d21/: Cargo.toml  p2botcode
2019/d22/: notes.txt
2019/d23/: Cargo.toml
2019/d3/: main.rs
2019/d4/: main.rs
2019/d5/: main.rs
2019/d6/: Cargo.toml
2019/d7/: main.rs
2019/d8/: d8.rb
2019/d9/: Cargo.toml  main.rs
2019/intcode/: Cargo.toml
2020/: Makefile
2020/d05/: d5.jl
2020/d07/: d7.rb
2020/d09/: d9.rb
2020/d1/: d1.jl
2020/d10/: d10.rb
2020/d11/: d11.rb
2020/d12/: d12.rb
2020/d13/: d13.rb
2020/d14/: d14.rb
2020/d15/: d15.d  d15.jl  d15.rb
2020/d16/: d16.rb
2020/d17/: d17.rb
2020/d18/: d18.rb
2020/d19/: d19.rb
2020/d2/: d2.jl
2020/d20/: d20.rb
2020/d21/: d21.rb
2020/d22/: d22.rb
2020/d23/: d23.rb
2020/d24/: d24.rb
2020/d25/: d25.jl
2020/d3/: d3.rb
2020/d4/: d4.jl
2020/d5/: boarding_pass.jl  runtests.jl
2020/d6/: d6.jl
2020/d7/: d7.rb
2020/d8/: d8.rb  machine.rb
2020/d9/: d9.rb
2021/: Makefile
2021/d01/: d01.cpp  d01.rb
2021/d02/: d02.rb
2021/d03/: d03.rb
2021/d04/: d04.rb
2021/d05/: d05.rb
2021/d06/: d06.rb
2021/d07/: d07.rb
2021/d08/: d08.rb
2021/d09/: d09.rb
2021/d10/: d10.rb
2021/d11/: d11.rb  test.rb
2021/d12/: d12.rb
2021/d13/: d13.rb  test.rb
2021/d14/: d14.rb
2021/d15/: d15.rb
2021/d16/: d16.rb  test.rb
2021/d17/: d17.rb  input.txt
2021/d18/: d18.rb  test.rb
2021/d19/: d19.rb  rotations.rb  test.rb
2021/d20/: d20.rb
2022/: Makefile
2023/: go.work
app/: D1.hs  D11.hs  D13.hs  D15.hs  D17.hs  D18.hs  D20.hs  D22.hs  D4.hs  D7.hs
d5_rs/: Cargo.toml
src/: AStar.hs  D10Lib.hs  D10Lib.hs.bak  D11Lib.hs  D12Lib.hs  D13Lib.hs  D14Lib.hs  D17Lib.hs  D18Lib.hs  D21Lib.hs  D22Lib.hs  D3Lib.hs  D4Lib.hs  D5Lib.hs  D6Lib.hs  D7Lib.hs  PathSearch.hs  Util.hs
test/: D10Spec.hs  D14Spec.hs  D16Spec.hs  D17Spec.hs  D22Spec.hs  D2Spec.hs  D3Spec.hs  D4Spec.hs  D5Spec.hs  D6Spec.hs  D7Spec.hs  PathSearchSpec.hs  UtilSpec.hs
(+188 files in other folders)
