name:                advent2016
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/wfleming/advent-of-code-2016
license:             BSD3
license-file:        LICENSE
author:              Will Fleming
maintainer:          will@flemi.ng
copyright:           Copyright: (c) 2016 Will Fleming
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     D2Lib
                     , D3Lib
                     , D4Lib
                     , D5Lib
                     , D6Lib
                     , D7Lib
                     , Util
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , split
                     , cryptohash
                     , bytestring
  default-language:    Haskell2010

executable d1
  hs-source-dirs:      app
  main-is:             D1.hs
  ghc-options:         -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent2016
                     , parsec
  default-language:    Haskell2010

executable d2
  hs-source-dirs:      app
  main-is:             D2.hs
  ghc-options:         -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent2016
                     , parsec
  default-language:    Haskell2010

executable d3
  hs-source-dirs:      app
  main-is:             D3.hs
  ghc-options:         -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent2016
                     , parsec
  default-language:    Haskell2010

executable d4
  hs-source-dirs:      app
  main-is:             D4.hs
  ghc-options:         -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent2016
                     , parsec
  default-language:    Haskell2010

executable d5
  hs-source-dirs:      app
  main-is:             D5.hs
  ghc-options:         -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent2016
  default-language:    Haskell2010

executable d6
  hs-source-dirs:      app
  main-is:             D6.hs
  ghc-options:         -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent2016
  default-language:    Haskell2010

executable d7
  hs-source-dirs:      app
  main-is:             D7.hs
  ghc-options:         -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent2016
  default-language:    Haskell2010

test-suite advent2016-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , advent2016
                     , hspec
                     , parsec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wfleming/advent-of-code-2016
