name:                D16
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wfleming/advent-of-code
license:             MIT
license-file:        LICENSE
author:              Will Fleming
maintainer:          will@flemi.ng
copyright:           Copyright: (c) 2016 Will Fleming
category:            Puzzle
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     D16Lib
                     , D16Lib.Parser
  build-depends:       base >= 4.7 && < 5
                     , megaparsec
  default-language:    Haskell2010
  other-modules        D16Spec

executable D16
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , D16
  default-language:    Haskell2010

test-suite D16-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , D16
                     , hspec
                     , QuickCheck
                     , megaparsec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wfleming/advent-of-code
